# Django_notebook

./: pyproject.toml
notes/noteapp/: views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templates/noteapp/: detail.html  index.html
notes/notes/: settings.py  urls.py
notes/users/: views.py
notes/users/migrations/: 0001_initial.py
